fix lỗi ngầm backend